# LeopardWM

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  release.yml
agent_docs/: distribution_setup.md  ipc-events.md  release.md
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  command_map.rs  config_cmds.rs  daemon_cmds.rs  doctor.rs  ipc_client.rs  main.rs  output.rs  tests.rs
crates/core_layout/: Cargo.toml
crates/core_layout/src/: animation.rs  column.rs  lib.rs  tests.rs  types.rs
crates/core_layout/src/workspace/: focus.rs  layout.rs  mod.rs  operations.rs  sizing.rs  state.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: animation_worker.rs  command_handler.rs  config.rs  drag.rs  event_handler.rs  events.rs  helpers.rs  ipc_server.rs  layout_apply.rs  main.rs  monitors.rs  notify.rs  overview.rs  persistence.rs  scratchpad.rs  startup.rs  state.rs  sticky.rs  tests.rs  transitions.rs  tray.rs  ui_sync.rs  update_check.rs  window_rules.rs
crates/daemon/src/settings/: html.rs  mod.rs  win32.rs
crates/daemon/tests/: integration.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: config_template.rs  hotkeys.rs  lib.rs
crates/platform_win32/: Cargo.toml
crates/platform_win32/src/: autostart.rs  border.rs  dialog.rs  elevation.rs  enumeration.rs  event_hooks.rs  focus.rs  gestures.rs  hotkeys.rs  ipc_security.rs  keyboard_hook.rs  lib.rs  mouse_hook.rs  overlay.rs  overview.rs  placement.rs  snapshot.rs  system.rs  tab_strip.rs  taskbar.rs  thumbnail.rs  toast.rs  types.rs  utils.rs  visibility.rs  window_query.rs  window_style.rs
crates/watchdog/: Cargo.toml
crates/watchdog/src/: main.rs  notification.rs
wix/: main.wxs
