[workspace]
resolver = "2"
members = [
    "crates/core_layout",
    "crates/platform_win32",
    "crates/ipc",
    "crates/daemon",
    "crates/cli",
    "crates/watchdog",
]

[workspace.package]
version = "0.1.19"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/jcardama/LeopardWM"
authors = ["jcardama <jcardama@hey.com>"]

[workspace.dependencies]
# Win32 bindings
windows = { version = "0.62", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Com",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_Storage_Xps",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
toml = "1.1"
directories = "6"

# WebView
wry = "0.55"
raw-window-handle = { version = "0.6", features = ["std"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Cohesion guard: cap function length. Active only where a crate opts in via
# `[lints]\nworkspace = true`. Threshold is tuned in clippy.toml.
# NOTE: `/verify` + `/dod` run `cargo clippy -- -D warnings`, so this is effectively a
# hard gate, not a soft warning — run `cargo clippy --all` on Windows to confirm green
# and raise the threshold (clippy.toml) above your current worst function if it fails.
[workspace.lints.clippy]
too_many_lines = "warn"
