[package]
name = "leopardwm-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Main daemon process for LeopardWM window manager"

[[bin]]
name = "leopardwm"
path = "src/main.rs"

[dependencies]
leopardwm-core-layout = { path = "../core_layout" }
leopardwm-platform-win32 = { path = "../platform_win32" }
leopardwm-ipc = { path = "../ipc" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tray-icon = { version = "0.24", default-features = false }
ureq = { version = "2", default-features = false, features = ["tls"] }
semver = "1"
windows = { workspace = true }
wry = { workspace = true }
raw-window-handle = { workspace = true }
regex = "1"
png = "0.18"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]

[package.metadata.wix]
name = "LeopardWM"
product-name = "LeopardWM"

[lints]
workspace = true
