[package]
name = "leopardwm-platform-win32"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Windows platform integration for LeopardWM (HWND manipulation, DWM cloaking)"

[dependencies]
leopardwm-core-layout = { path = "../core_layout" }
# UI_Notifications + Data_Xml_Dom power the WinRT toasts in toast.rs (shared by
# the daemon and watchdog). Additive over the workspace's Win32_* features.
windows = { workspace = true, features = ["UI_Notifications", "Data_Xml_Dom"] }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
winreg = "0.56"

[dev-dependencies]

[lints]
workspace = true
